NMS-12089: upgrade ActiveMQ to 5.15.15 (and Camel to 2.20.4 to match)
Spring Camel contexts require setting registerEndpointIdsFromRoute=true
to remain backwards-compatible with Camel 2.19.

We can evaluate whether we actually need that in the future, but for
now my goal was the smallest amount of churn.

--- a/features/sentinel/repository/pom.xml
+++ b/features/sentinel/repository/pom.xml
@@ -39,6 +39,9 @@
                             <!-- To ensure that all JAR files for a feature 
                                 are included in the repository tar.gz file, add the feature to this list. -->
                             <features>
+                                <feature>karaf-extender</feature>
+                                <feature>scv</feature>
+
                                 <!-- OpenNMS features -->
                                 <feature>opennms-core-ipc-rpc-jms</feature>
                                 <feature>opennms-core-ipc-rpc-aws-sqs</feature>
