NMS-14568: get rid of shaded spring, use external patched dependencies

--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -515,7 +515,7 @@
     </dependency>
     <dependency>
       <groupId>org.opennms.dependencies</groupId>
-      <artifactId>spring-beans-shaded-dependencies</artifactId>
+      <artifactId>spring-dependencies</artifactId>
       <version>${project.version}</version>
       <type>pom</type>
       <scope>provided</scope>
