--- a/container/pom.xml
+++ b/container/pom.xml
@@ -18,6 +18,7 @@
     <module>jaas-login-module</module>
     <module>extender</module>
     <module>spring-extender</module>
+    <module>spring-31-dependencies</module>
     <module>shared</module>
   </modules>
 </project>
