--- a/container/karaf/pom.xml
+++ b/container/karaf/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <license.skipAddThirdParty>true</license.skipAddThirdParty>
+        <enforcer-skip-banned-dependencies>true</enforcer-skip-banned-dependencies>
     </properties>
 
     <build>
@@ -271,7 +272,7 @@
         </dependency>
         <dependency>
             <groupId>org.opennms.dependencies</groupId>
-            <artifactId>spring-beans-shaded-dependencies</artifactId>
+            <artifactId>spring-dependencies</artifactId>
             <version>${project.version}</version>
             <type>pom</type>
             <scope>provided</scope>
@@ -280,11 +281,11 @@
 
     <repositories>
         <repository>
-            <snapshots><enabled>false</enabled></snapshots>
-            <releases><enabled>true</enabled></releases>
-            <id>central</id>
-            <name>Maven Central</name>
-            <url>https://maven.opennms.org/content/repositories/central/</url>
+            <id>opennms-repo</id>
+            <url>https://maven.opennms.org/content/groups/opennms.org-release/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
 </project>
