--- a/dependencies/spring-web/pom.xml
+++ b/dependencies/spring-web/pom.xml
@@ -20,12 +20,10 @@
     <dependency>
       <groupId>org.apache.servicemix.bundles</groupId>
       <artifactId>org.apache.servicemix.bundles.spring-web</artifactId>
-      <version>${springVersion}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.servicemix.bundles</groupId>
       <artifactId>org.apache.servicemix.bundles.spring-webmvc</artifactId>
-      <version>${springVersion}</version>
     </dependency>
     <!-- Spring Dependencies -->
     <dependency>
@@ -59,4 +57,14 @@
       <artifactId>xml-apis</artifactId>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>opennms-repo</id>
+      <url>https://maven.opennms.org/content/groups/opennms.org-release/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 </project>
