Fix OpenTracing inject/extract at runtime.

--- a/core/tracing/jaeger-osgi/pom.xml
+++ b/core/tracing/jaeger-osgi/pom.xml
@@ -70,7 +70,9 @@
             <Export-Package>
               io.jaegertracing,
               io.jaegertracing.internal,
-              io.jaegertracing.internal.reporters
+              io.jaegertracing.internal.propagation,
+              io.jaegertracing.internal.reporters,
+              io.jaegertracing.spi
             </Export-Package>
           </instructions>
           <unpackBundle>true</unpackBundle>
