Fix extract by implementing TracingInfoCarrier.iterator() and add test
Also make logging work in the test so I can see the exception that
Jaeger was logging. :)

--- a/core/tracing/jaeger-tracer/pom.xml
+++ b/core/tracing/jaeger-tracer/pom.xml
@@ -54,5 +54,11 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>${log4j2Version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
