--- a/pom.xml
+++ b/pom.xml
@@ -1741,6 +1741,7 @@
     <paxSwissboxVersion>1.8.3</paxSwissboxVersion>
     <paxWebVersion>7.3.23</paxWebVersion>
     <pktsVersion>3.0.0</pktsVersion>
+    <progressBarVersion>0.9.4</progressBarVersion>
     <protobufVersion>3.16.1</protobufVersion>
     <protobuf2Version>2.6.1</protobuf2Version>
     <postgresqlVersion>42.4.1</postgresqlVersion>
@@ -4978,6 +4979,11 @@
         <groupId>org.apache.sshd</groupId>
         <artifactId>sshd-core</artifactId>
         <version>${minaSshdVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>me.tongfei</groupId>
+        <artifactId>progressbar</artifactId>
+        <version>${progressBarVersion}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
