UI: Add font-awesome, needed to add 'old' icons to Vue UI

--- a/ui/package.json
+++ b/ui/package.json
@@ -41,6 +41,10 @@
     "@featherds/textarea": "0.10.17",
     "@featherds/tooltip": "0.10.17",
     "@featherds/utils": "0.10.17",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "@vueuse/core": "^9.1.0",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
